--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -20,18 +19,16 @@
   "homepage": "https://github.com/peterssonz/GASP_task#readme",
   "devDependencies": {
     "@types/debug": "^4.1.12",
-    "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.7",
     "@types/ms": "^0.7.34",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.2",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vitest": "^2.0.3"
   },
   "dependencies": {
-    "@mangata-finance/sdk": "^2.2.1-eth-rollup-develop.54",
     "@polkadot/api": "^11.1.1",
     "@polkadot/keyring": "^13.0.2",
-    "gasp-sdk": "^0.0.2-eth-rollup-develop.14",
+    "gasp-sdk": "^0.0.2-develop.14",
+    "gasp-types": "^0.0.2-eth-rollup-develop.14",
     "lodash": "^4.17.21"
   }
 }
